# 7MSim

./: README.md
7MSIm/controllers/cameraController/: server.hpp
7MSIm/controllers/movingObstacleController/: movingObstacleController.cpp
7MSIm/controllers/robotController/: client.cpp  robotController.cpp
7MSIm/controllers/supervisorController/: client.cpp  client.h  supervisorController  supervisorController.cpp
7MSIm/controllers/supervisorNewController/: supervisorNewController.cpp
7MSIm/controllers/tryController/: tryController  tryController.cpp
7MSIm/controllers/tryController4w/: tryController4w.cpp
7MSIm/protos/robot/: cap.proto  capNew.proto  coloredCapNew.proto  robot.proto  robotNew.proto
7MSIm/worlds/: .OneBot.wbproj  .obstacleAvoidance.wbproj  OneBot.wbt  obstacleAvoidance.wbt
7MSim/controllers/actorController/: Makefile  actorController  actorController.cpp  client.h  server.cpp  server.h  world_data.pb.h
7MSim/controllers/cameraController/: cameraController  cameraController.cpp
7MSim/controllers/easyCameraController/: easyCameraController.cpp
7MSim/controllers/easyRobotController/: easyRobotController.cpp
7MSim/controllers/movingObstacleController/: movingObstacleController  movingObstacleController.cpp
7MSim/controllers/robotController/: Makefile  client.h  robotController  robotController.cpp
7MSim/controllers/robotNewController/: Makefile  client.cpp  client.h  robotNewController  robotNewController.cpp
7MSim/controllers/supervisorNewController/: Makefile  (+7 more)
7MSim/protos/: .ball.cache  .floor.cache  ball.proto
7MSim/worlds/: .7MSim.wbproj  .7MWorld.wbproj  .Draft.wbproj  .OneBot.wbproj  .obstacleAvoidance.wbproj  7MSim.wbt  Draft.wbt  OneBot.wbt  obstacleAvoidance.wbt
DWAClient/: .gitignore  CMakeLists.txt  DWAClient  DWAClient.cbp  ObstacleAvoidance.cpp  ObstacleAvoidance.h  SafeQueue.h  TCPServer.cpp  TCPServer.h  UDPServer.cpp  UDPServer.h  WorldStructures.h  main.cpp
arbiter/: CMakeLists.txt  game.cpp  game.h  main.cpp  robot.h  server.cpp  server.h
protobuf/: world_data.proto
(+41 files in other folders)
